backend/backend_output.log

> backend@1.0.0 dev
> nodemon src/index.ts

[33m[nodemon] 3.1.14[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: ts,json[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
/app/backend/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/index.ts(1,8): error TS1295: ECMAScript imports and exports cannot be written in a CommonJS file under 'verbatimModuleSyntax'. Adjust the 'type' field in the nearest 'package.json' to make this file an ECMAScript module, or adjust your 'verbatimModuleSyntax', 'module', and 'moduleResolution' settings in TypeScript.
src/index.ts(2,10): error TS1295: ECMAScript imports and exports cannot be written in a CommonJS file under 'verbatimModuleSyntax'. Adjust the 'type' field in the nearest 'package.json' to make this file an ECMAScript module, or adjust your 'verbatimModuleSyntax', 'module', and 'moduleResolution' settings in TypeScript.
src/index.ts(3,8): error TS1295: ECMAScript imports and exports cannot be written in a CommonJS file under 'verbatimModuleSyntax'. Adjust the 'type' field in the nearest 'package.json' to make this file an ECMAScript module, or adjust your 'verbatimModuleSyntax', 'module', and 'moduleResolution' settings in TypeScript.

    at createTSError (/app/backend/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/app/backend/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/app/backend/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/app/backend/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/app/backend/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1838:10
    at Object.require.extensions.<computed> [as .ts] (/app/backend/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 1295, 1295, 1295 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
Server is running on port 3000
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
Server is running on port 3000
